fix(nxmc): pass URL as separate argv element when launching browser
Runtime.exec(String) tokenizes on whitespace instead of invoking a
shell, so the quotes around the macOS URL were passed to /usr/bin/open
as literal characters and every launch failed silently. Use the
String[] form on both macOS and Linux so the URL reaches the launcher
intact. This also removes the need for urlEncode(), which only existed
to keep spaces from splitting the Linux command line.